--- a/chars_book/index.html
+++ b/chars_book/index.html
@@ -72,7 +72,8 @@
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告</a></li>
-<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言</a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#全人物表"><i class="fa fa-check"></i><b>1.3</b> 全人物表</a></li>
+<li class="chapter" data-level="1.4" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.4</b> 前言</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法</a>
 <ul>
@@ -90,8 +91,8 @@
 <li class="chapter" data-level="3.2" data-path="战术系.html"><a href="战术系.html#大黄蜂"><i class="fa fa-check"></i><b>3.2</b> 大黄蜂</a></li>
 <li class="chapter" data-level="3.3" data-path="战术系.html"><a href="战术系.html#通天晓"><i class="fa fa-check"></i><b>3.3</b> 通天晓</a></li>
 <li class="chapter" data-level="3.4" data-path="战术系.html"><a href="战术系.html#红蜘蛛"><i class="fa fa-check"></i><b>3.4</b> 红蜘蛛</a></li>
-<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.5</b> 战威</a></li>
-<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.6</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.5</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.6</b> 战威</a></li>
 <li class="chapter" data-level="3.7" data-path="战术系.html"><a href="战术系.html#狂飙"><i class="fa fa-check"></i><b>3.7</b> 狂飙</a></li>
 <li class="chapter" data-level="3.8" data-path="战术系.html"><a href="战术系.html#暗黑擎天柱"><i class="fa fa-check"></i><b>3.8</b> 暗黑擎天柱</a></li>
 <li class="chapter" data-level="3.9" data-path="战术系.html"><a href="战术系.html#补天士"><i class="fa fa-check"></i><b>3.9</b> 补天士</a></li>
@@ -148,8 +149,8 @@
 <li class="chapter" data-level="8" data-path="爆破系.html"><a href="爆破系.html"><i class="fa fa-check"></i><b>8</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系</a>
 <ul>
 <li class="chapter" data-level="8.1" data-path="爆破系.html"><a href="爆破系.html#电影铁皮"><i class="fa fa-check"></i><b>8.1</b> 电影铁皮</a></li>
-<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.2</b> 黄蜂勇士</a></li>
-<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.3</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.2</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.3</b> 黄蜂勇士</a></li>
 <li class="chapter" data-level="8.4" data-path="爆破系.html"><a href="爆破系.html#爆威"><i class="fa fa-check"></i><b>8.4</b> 爆威</a></li>
 <li class="chapter" data-level="8.5" data-path="爆破系.html"><a href="爆破系.html#喷气机"><i class="fa fa-check"></i><b>8.5</b> 喷气机</a></li>
 <li class="chapter" data-level="8.6" data-path="爆破系.html"><a href="爆破系.html#惊破天"><i class="fa fa-check"></i><b>8.6</b> 惊破天</a></li>
@@ -196,7 +197,7 @@
 <div id="header">
 <h1 class="title">百炼为战全人物解析</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-10-13</em></p>
+<p class="date"><em>更新时间：2022-10-28</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
@@ -245,12 +246,55 @@
 <li>开启专门章节讲特色的协同。</li>
 </ul>
 </div>
-<div id="前言" class="section level2 hasAnchor" number="1.3">
-<h2><span class="header-section-number">1.3</span> 前言<a href="index.html#前言" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="全人物表" class="section level2 hasAnchor" number="1.3">
+<h2><span class="header-section-number">1.3</span> 全人物表<a href="index.html#全人物表" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<table>
+<caption><span id="tab:unnamed-chunk-1">Table 1.1: </span>全人物表（54名常规角色）</caption>
+<colgroup>
+<col width="34%" />
+<col width="65%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="right">类别</th>
+<th align="left">角色</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">战术<img src="images/Tactician-small.png" style="height:0.6cm" /></td>
+<td align="left"><a href="战术系.html#战擎">战擎</a>，<a href="战术系.html#大黄蜂">大黄蜂</a>，<a href="战术系.html#通天晓">通天晓</a>，<a href="战术系.html#红蜘蛛">红蜘蛛</a>，<a href="战术系.html#恐龙勇士">恐龙勇士</a>，<a href="战术系.html#战威">战威</a>，<a href="战术系.html#狂飙">狂飙</a>，<a href="战术系.html#暗黑擎天柱">暗黑擎天柱</a>，<a href="战术系.html#补天士">补天士</a>，<a href="战术系.html#音板">音板</a></td>
+</tr>
+<tr class="even">
+<td align="right">斗士<img src="images/Brawler-small.png" style="height:0.6cm" /></td>
+<td align="left"><a href="斗士系.html#斗擎">斗擎</a>，<a href="斗士系.html#汽车大师">汽车大师</a>，<a href="斗士系.html#碾碎器">碾碎器</a>，<a href="斗士系.html#钢锁">钢锁</a>，<a href="斗士系.html#猩猩队长">猩猩队长</a>，<a href="斗士系.html#野牛">野牛</a>，<a href="斗士系.html#惊天雷">惊天雷</a>，<a href="斗士系.html#g1铁皮">G1铁皮</a>，<a href="斗士系.html#飞毛腿">飞毛腿</a></td>
+</tr>
+<tr class="odd">
+<td align="right">战士<img src="images/Warrior-small.png" style="height:0.6cm" /></td>
+<td align="left"><a href="战士系.html#阿尔茜">阿尔茜</a>，<a href="战士系.html#碎骨魔">碎骨魔</a>，<a href="战士系.html#雷震">雷震</a>，<a href="战士系.html#漂移">漂移</a>，<a href="战士系.html#热破">热破</a>，<a href="战士系.html#探长">探长</a>，<a href="战士系.html#巨蝎勇士">巨蝎勇士</a>，<a href="战士系.html#亡灵天尊">亡灵天尊</a>，<a href="战士系.html#挽歌">挽歌</a></td>
+</tr>
+<tr class="even">
+<td align="right">侦查<img src="images/Scout-small.png" style="height:0.6cm" /></td>
+<td align="left"><a href="侦查系.html#横炮">横炮</a>，<a href="侦查系.html#风刃">风刃</a>，<a href="侦查系.html#路障">路障</a>，<a href="侦查系.html#警车">警车</a>，<a href="侦查系.html#小黄蜂">小黄蜂</a>，<a href="侦查系.html#反冲">反冲</a>，<a href="侦查系.html#黄豹">黄豹</a>，<a href="侦查系.html#爵士">爵士</a>，<a href="侦查系.html#滑流">滑流</a></td>
+</tr>
+<tr class="odd">
+<td align="right">科技<img src="images/Tech-small.png" style="height:0.6cm" /></td>
+<td align="left"><a href="科技系.html#犀牛">犀牛</a>，<a href="科技系.html#救护车">救护车</a>，<a href="科技系.html#幻影">幻影</a>，<a href="科技系.html#声波">声波</a>，<a href="科技系.html#震荡波">震荡波</a>，<a href="科技系.html#录音机">录音机</a>，<a href="科技系.html#千斤顶">千斤顶</a>，<a href="科技系.html#天火">天火</a>，<a href="科技系.html#闹翻天">闹翻天</a></td>
+</tr>
+<tr class="even">
+<td align="right">爆破<img src="images/Demolitions-small.png" style="height:0.6cm" /></td>
+<td align="left"><a href="爆破系.html#电影铁皮">电影铁皮</a>，<a href="爆破系.html#搅拌者">搅拌者</a>，<a href="爆破系.html#黄蜂勇士">黄蜂勇士</a>，<a href="爆破系.html#爆威">爆威</a>，<a href="爆破系.html#喷气机">喷气机</a>，<a href="爆破系.html#惊破天">惊破天</a>，<a href="爆破系.html#震天尊">震天尊</a>，<a href="爆破系.html#飞过山">飞过山</a></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="前言" class="section level2 hasAnchor" number="1.4">
+<h2><span class="header-section-number">1.4</span> 前言<a href="index.html#前言" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>《变形金刚：百炼为战》（Transformers: Forged to Fight）是一款以变形金刚为主题的格斗类手游，由Kabam公司开发，2017年4月正式上线。游戏采用了来自多个脉系的变形金刚进行格斗对战，战斗模式为一对一（玩家对电脑AI），没有玩家间实时对战的功能。</p>
 <p>《百炼为战》在画面、人物形象、游戏模式与动作设计方面均让人眼前一亮，尤其在变形金刚这个IP的游戏中属于佼佼者。但游戏对系统要求高，频繁的卡顿与bug一直困扰并限制着新玩家入坑。运营思路的缺乏也让这个游戏始终只拥有十分小众的玩家群体。</p>
-<p>作为游戏的铁杆粉丝，我在游戏公测时入坑，一直玩到今天，经历了游戏中的各种变化，对这个游戏的感情很深。于是在这个游戏走到晚期，角色稳定下来之后，结合自己对角色的使用的理解，写下了这篇《全人物解析》。目前看来，游戏有复苏的迹象，新人物频频登场，于是继续把新人物的心得也持续更新。</p>
-<p>以下的内容均来自本人使用过程中的经验和与玩家群体交流的心得，感谢所有玩家对这个游戏和我本人的帮助。文中内容乃一家之言，供交流学习用，如有批评指正，欢迎来信： <a href="mailto:kmc.best@qq.com" class="email">kmc.best@qq.com</a></p>
+<p>作为游戏的铁杆粉丝，我在游戏公测时入坑，一直玩到今天，经历了游戏中的各种变化，对这个游戏的感情很深。于是在这个游戏走到晚期，角色稳定下来之后，结合自己对角色的使用的理解，写下了这篇《全人物解析》。2022年初，游戏有复苏的迹象，新人物频频登场，团队也高调发布了新的发展路线（包括发布新人物，新盟战，改进奖励），但是事实证明这只是开发团队与公司高层的最后一次对赌——游戏在连续几个月发布新机器人后依然没有产生足够的赢利，于是在2022年10月15日宣布关服的决定，即将在2023年1月13日正式关服。</p>
+<p>游戏要结束了，感谢所有玩家对这个游戏的热爱和对我本人的帮助。</p>
+<p>以下的内容均来自本人使用过程中的经验和与玩家群体交流的心得，文中内容乃一家之言，供交流学习用，如有批评指正，欢迎来信： <a href="mailto:kmc.best@qq.com" class="email">kmc.best@qq.com</a></p>
 <!-- **本人主号于2021年2月底弃用，之后零星地给网友带带号，跟进了解游戏的进展，并对本文做持续更新。** -->
 
 </div>
