--- a/chars_book/战士系.html
+++ b/chars_book/战士系.html
@@ -72,7 +72,8 @@
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告</a></li>
-<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言</a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#全人物表"><i class="fa fa-check"></i><b>1.3</b> 全人物表</a></li>
+<li class="chapter" data-level="1.4" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.4</b> 前言</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法</a>
 <ul>
@@ -90,8 +91,8 @@
 <li class="chapter" data-level="3.2" data-path="战术系.html"><a href="战术系.html#大黄蜂"><i class="fa fa-check"></i><b>3.2</b> 大黄蜂</a></li>
 <li class="chapter" data-level="3.3" data-path="战术系.html"><a href="战术系.html#通天晓"><i class="fa fa-check"></i><b>3.3</b> 通天晓</a></li>
 <li class="chapter" data-level="3.4" data-path="战术系.html"><a href="战术系.html#红蜘蛛"><i class="fa fa-check"></i><b>3.4</b> 红蜘蛛</a></li>
-<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.5</b> 战威</a></li>
-<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.6</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.5</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.6</b> 战威</a></li>
 <li class="chapter" data-level="3.7" data-path="战术系.html"><a href="战术系.html#狂飙"><i class="fa fa-check"></i><b>3.7</b> 狂飙</a></li>
 <li class="chapter" data-level="3.8" data-path="战术系.html"><a href="战术系.html#暗黑擎天柱"><i class="fa fa-check"></i><b>3.8</b> 暗黑擎天柱</a></li>
 <li class="chapter" data-level="3.9" data-path="战术系.html"><a href="战术系.html#补天士"><i class="fa fa-check"></i><b>3.9</b> 补天士</a></li>
@@ -148,8 +149,8 @@
 <li class="chapter" data-level="8" data-path="爆破系.html"><a href="爆破系.html"><i class="fa fa-check"></i><b>8</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系</a>
 <ul>
 <li class="chapter" data-level="8.1" data-path="爆破系.html"><a href="爆破系.html#电影铁皮"><i class="fa fa-check"></i><b>8.1</b> 电影铁皮</a></li>
-<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.2</b> 黄蜂勇士</a></li>
-<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.3</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.2</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.3</b> 黄蜂勇士</a></li>
 <li class="chapter" data-level="8.4" data-path="爆破系.html"><a href="爆破系.html#爆威"><i class="fa fa-check"></i><b>8.4</b> 爆威</a></li>
 <li class="chapter" data-level="8.5" data-path="爆破系.html"><a href="爆破系.html#喷气机"><i class="fa fa-check"></i><b>8.5</b> 喷气机</a></li>
 <li class="chapter" data-level="8.6" data-path="爆破系.html"><a href="爆破系.html#惊破天"><i class="fa fa-check"></i><b>8.6</b> 惊破天</a></li>
@@ -200,7 +201,7 @@
 <div id="碎骨魔" class="section level2 hasAnchor" number="5.1">
 <h2><span class="header-section-number">5.1</span> 碎骨魔<a href="战士系.html#碎骨魔" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/41%20-%20Bonecrusher_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-21-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-23-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-19" class="section level3 hasAnchor" number="5.1.1">
 <h3><span class="header-section-number">5.1.1</span> 特点分析<a href="战士系.html#特点分析-19" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -243,7 +244,7 @@
 <div id="雷震" class="section level2 hasAnchor" number="5.2">
 <h2><span class="header-section-number">5.2</span> 雷震<a href="战士系.html#雷震" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/40%20-%20Bludgeon_Icon_v4.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-22-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-24-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-20" class="section level3 hasAnchor" number="5.2.1">
 <h3><span class="header-section-number">5.2.1</span> 特点分析<a href="战士系.html#特点分析-20" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -300,7 +301,7 @@
 <div id="阿尔茜" class="section level2 hasAnchor" number="5.3">
 <h2><span class="header-section-number">5.3</span> 阿尔茜<a href="战士系.html#阿尔茜" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/39%20-%20Arcee_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-23-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-25-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-21" class="section level3 hasAnchor" number="5.3.1">
 <h3><span class="header-section-number">5.3.1</span> 特点分析<a href="战士系.html#特点分析-21" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -365,7 +366,7 @@
 <div id="漂移" class="section level2 hasAnchor" number="5.4">
 <h2><span class="header-section-number">5.4</span> 漂移<a href="战士系.html#漂移" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/42%20-%20Drift_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-24-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-26-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-22" class="section level3 hasAnchor" number="5.4.1">
 <h3><span class="header-section-number">5.4.1</span> 特点分析<a href="战士系.html#特点分析-22" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -423,7 +424,7 @@
 <div id="热破" class="section level2 hasAnchor" number="5.5">
 <h2><span class="header-section-number">5.5</span> 热破<a href="战士系.html#热破" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/43%20-%20Hot_Rod_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-25-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-27-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-23" class="section level3 hasAnchor" number="5.5.1">
 <h3><span class="header-section-number">5.5.1</span> 特点分析<a href="战士系.html#特点分析-23" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -478,7 +479,7 @@
 <div id="探长" class="section level2 hasAnchor" number="5.6">
 <h2><span class="header-section-number">5.6</span> 探长<a href="战士系.html#探长" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/44%20-%20Hound_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-26-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-28-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-24" class="section level3 hasAnchor" number="5.6.1">
 <h3><span class="header-section-number">5.6.1</span> 特点分析<a href="战士系.html#特点分析-24" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -557,7 +558,7 @@
 <div id="巨蝎勇士" class="section level2 hasAnchor" number="5.7">
 <h2><span class="header-section-number">5.7</span> 巨蝎勇士<a href="战士系.html#巨蝎勇士" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/45%20-%20Scorponok_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-27-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-29-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-25" class="section level3 hasAnchor" number="5.7.1">
 <h3><span class="header-section-number">5.7.1</span> 特点分析<a href="战士系.html#特点分析-25" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -608,7 +609,7 @@
 <div id="亡灵天尊" class="section level2 hasAnchor" number="5.8">
 <h2><span class="header-section-number">5.8</span> 亡灵天尊<a href="战士系.html#亡灵天尊" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/46%20-%20Necrotronus_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-28-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-30-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-26" class="section level3 hasAnchor" number="5.8.1">
 <h3><span class="header-section-number">5.8.1</span> 特点分析<a href="战士系.html#特点分析-26" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -688,7 +689,7 @@
 <div id="挽歌" class="section level2 hasAnchor" number="5.9">
 <h2><span class="header-section-number">5.9</span> 挽歌<a href="战士系.html#挽歌" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/49%20-%20Dirge_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-29-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-31-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-27" class="section level3 hasAnchor" number="5.9.1">
 <h3><span class="header-section-number">5.9.1</span> 特点分析<a href="战士系.html#特点分析-27" class="anchor-section" aria-label="Anchor link to header"></a></h3>
