--- a/chars_book/科技系.html
+++ b/chars_book/科技系.html
@@ -72,7 +72,8 @@
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告</a></li>
-<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言</a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#全人物表"><i class="fa fa-check"></i><b>1.3</b> 全人物表</a></li>
+<li class="chapter" data-level="1.4" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.4</b> 前言</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法</a>
 <ul>
@@ -90,8 +91,8 @@
 <li class="chapter" data-level="3.2" data-path="战术系.html"><a href="战术系.html#大黄蜂"><i class="fa fa-check"></i><b>3.2</b> 大黄蜂</a></li>
 <li class="chapter" data-level="3.3" data-path="战术系.html"><a href="战术系.html#通天晓"><i class="fa fa-check"></i><b>3.3</b> 通天晓</a></li>
 <li class="chapter" data-level="3.4" data-path="战术系.html"><a href="战术系.html#红蜘蛛"><i class="fa fa-check"></i><b>3.4</b> 红蜘蛛</a></li>
-<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.5</b> 战威</a></li>
-<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.6</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.5</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.6</b> 战威</a></li>
 <li class="chapter" data-level="3.7" data-path="战术系.html"><a href="战术系.html#狂飙"><i class="fa fa-check"></i><b>3.7</b> 狂飙</a></li>
 <li class="chapter" data-level="3.8" data-path="战术系.html"><a href="战术系.html#暗黑擎天柱"><i class="fa fa-check"></i><b>3.8</b> 暗黑擎天柱</a></li>
 <li class="chapter" data-level="3.9" data-path="战术系.html"><a href="战术系.html#补天士"><i class="fa fa-check"></i><b>3.9</b> 补天士</a></li>
@@ -148,8 +149,8 @@
 <li class="chapter" data-level="8" data-path="爆破系.html"><a href="爆破系.html"><i class="fa fa-check"></i><b>8</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系</a>
 <ul>
 <li class="chapter" data-level="8.1" data-path="爆破系.html"><a href="爆破系.html#电影铁皮"><i class="fa fa-check"></i><b>8.1</b> 电影铁皮</a></li>
-<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.2</b> 黄蜂勇士</a></li>
-<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.3</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.2</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.3</b> 黄蜂勇士</a></li>
 <li class="chapter" data-level="8.4" data-path="爆破系.html"><a href="爆破系.html#爆威"><i class="fa fa-check"></i><b>8.4</b> 爆威</a></li>
 <li class="chapter" data-level="8.5" data-path="爆破系.html"><a href="爆破系.html#喷气机"><i class="fa fa-check"></i><b>8.5</b> 喷气机</a></li>
 <li class="chapter" data-level="8.6" data-path="爆破系.html"><a href="爆破系.html#惊破天"><i class="fa fa-check"></i><b>8.6</b> 惊破天</a></li>
@@ -200,7 +201,7 @@
 <div id="救护车" class="section level2 hasAnchor" number="7.1">
 <h2><span class="header-section-number">7.1</span> 救护车<a href="科技系.html#救护车" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/10%20-%20Ratchet_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-39-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-41-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-37" class="section level3 hasAnchor" number="7.1.1">
 <h3><span class="header-section-number">7.1.1</span> 特点分析<a href="科技系.html#特点分析-37" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -252,7 +253,7 @@
 <div id="幻影" class="section level2 hasAnchor" number="7.2">
 <h2><span class="header-section-number">7.2</span> 幻影<a href="科技系.html#幻影" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/9%20-%20Mirage_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-40-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-42-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-38" class="section level3 hasAnchor" number="7.2.1">
 <h3><span class="header-section-number">7.2.1</span> 特点分析<a href="科技系.html#特点分析-38" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -317,7 +318,7 @@
 <div id="犀牛" class="section level2 hasAnchor" number="7.3">
 <h2><span class="header-section-number">7.3</span> 犀牛<a href="科技系.html#犀牛" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/11%20-%20Rhinox_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-41-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-43-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-39" class="section level3 hasAnchor" number="7.3.1">
 <h3><span class="header-section-number">7.3.1</span> 特点分析<a href="科技系.html#特点分析-39" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -379,7 +380,7 @@
 <div id="声波" class="section level2 hasAnchor" number="7.4">
 <h2><span class="header-section-number">7.4</span> 声波<a href="科技系.html#声波" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/12%20-%20Soundwave_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-42-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-44-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-40" class="section level3 hasAnchor" number="7.4.1">
 <h3><span class="header-section-number">7.4.1</span> 特点分析<a href="科技系.html#特点分析-40" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -437,7 +438,7 @@
 <div id="震荡波" class="section level2 hasAnchor" number="7.5">
 <h2><span class="header-section-number">7.5</span> 震荡波<a href="科技系.html#震荡波" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/13%20-%20Shockwave_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-43-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-45-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-41" class="section level3 hasAnchor" number="7.5.1">
 <h3><span class="header-section-number">7.5.1</span> 特点分析<a href="科技系.html#特点分析-41" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -505,7 +506,7 @@
 <div id="录音机" class="section level2 hasAnchor" number="7.6">
 <h2><span class="header-section-number">7.6</span> 录音机<a href="科技系.html#录音机" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/14%20-%20Blaster_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-44-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-46-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-42" class="section level3 hasAnchor" number="7.6.1">
 <h3><span class="header-section-number">7.6.1</span> 特点分析<a href="科技系.html#特点分析-42" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -557,7 +558,7 @@
 <div id="千斤顶" class="section level2 hasAnchor" number="7.7">
 <h2><span class="header-section-number">7.7</span> 千斤顶<a href="科技系.html#千斤顶" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/15%20-%20Wheeljack_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-45-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-47-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-43" class="section level3 hasAnchor" number="7.7.1">
 <h3><span class="header-section-number">7.7.1</span> 特点分析<a href="科技系.html#特点分析-43" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -614,7 +615,7 @@
 <div id="天火" class="section level2 hasAnchor" number="7.8">
 <h2><span class="header-section-number">7.8</span> 天火<a href="科技系.html#天火" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/16%20-%20Jetfire_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-46-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-48-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-44" class="section level3 hasAnchor" number="7.8.1">
 <h3><span class="header-section-number">7.8.1</span> 特点分析<a href="科技系.html#特点分析-44" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -686,7 +687,7 @@
 <div id="闹翻天" class="section level2 hasAnchor" number="7.9">
 <h2><span class="header-section-number">7.9</span> 闹翻天<a href="科技系.html#闹翻天" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/48%20-%20Skywarp_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-47-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-49-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-45" class="section level3 hasAnchor" number="7.9.1">
 <h3><span class="header-section-number">7.9.1</span> 特点分析<a href="科技系.html#特点分析-45" class="anchor-section" aria-label="Anchor link to header"></a></h3>
