--- a/protoform_book/成长日历.html
+++ b/protoform_book/成长日历.html
@@ -215,8 +215,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="2.2.15.1" data-path="成长日历.html"><a href="成长日历.html#还会有克劳莉娅吗"><i class="fa fa-check"></i><b>2.2.15.1</b> 还会有克劳莉娅吗</a></li>
 <li class="chapter" data-level="2.2.15.2" data-path="成长日历.html"><a href="成长日历.html#能量块大放送"><i class="fa fa-check"></i><b>2.2.15.2</b> 能量块大放送</a></li>
-<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#星满锻还是53满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 4星满锻还是53满级</a></li>
+<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#四星满锻还是五三满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 四星满锻还是五三满级</a></li>
+<li class="chapter" data-level="2.2.15.4" data-path="成长日历.html"><a href="成长日历.html#打通领袖难度"><i class="fa fa-check"></i><b>2.2.15.4</b> 打通领袖难度</a></li>
 </ul></li>
+<li class="chapter" data-level="2.2.16" data-path="成长日历.html"><a href="成长日历.html#久违了新盟战久违了迷雾"><i class="fa fa-check"></i><b>2.2.16</b> 久违了，新盟战，久违了，迷雾</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -953,19 +955,140 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="还会有克劳莉娅吗" class="section level4 hasAnchor" number="2.2.15.1">
 <h4><span class="header-section-number">2.2.15.1</span> 还会有克劳莉娅吗<a href="成长日历.html#还会有克劳莉娅吗" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>10月20日的时候官方通知接下来的两周为过渡周，通用币机器人为黄蜂和巨蝎勇士（跟我这个号抽到的前两个五星完全一致，冥冥之中自有天意？），两周的过渡周并不让人意外，但也让克劳莉娅是否能发布再次变得扑朔迷离，据老外分析，9.1中还有克劳莉娅，但是9.2的游戏数据中已经没有她了。不过通知关服后正好是12周的时间，2周超能勇士活动，另外还有10周正好是两个新人物发布周期，是不是还可以期待一下？</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-22"></span>
+<img src="02-juvenile_insertimage_11.png" alt="会成为遗憾吗？"  />
+<p class="caption">
+图2.20: 会成为遗憾吗？
+</p>
+</div>
 </div>
 <div id="能量块大放送" class="section level4 hasAnchor" number="2.2.15.2">
 <h4><span class="header-section-number">2.2.15.2</span> 能量块大放送<a href="成长日历.html#能量块大放送" class="anchor-section" aria-label="Anchor link to header"></a></h4>
 <p>在宣布关服后很多人要求卡邦把资源放开，无限提供各类火种、黄金、能量块，让大家能把想升的都升到毕业。要求可能有点高，但卡邦现在每周送3500能量块还是比较慷慨的，也省得天天看广告（我想我也会怀念《胜利之吻》各种不同的屁股）了。这么多能量块要怎么花？首先我把精通推进了一部分，点满了勇气，让汽车大师在突袭中更有优势。打开了深度创伤加强战擎和黄豹。</p>
 <p>因为我的遗迹券19张，于是在新一轮特殊任务开始时赶紧探索了新手，买到了隐形场，然后开掉那些能产黄金的水晶（黄金水晶，竞技场水晶，矿13水晶）。卡邦虽然送能量块，但是黄金可没送，升级依然很累。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-23"></span>
+<img src="02-juvenile_insertimage_13.png" alt="竞技场水晶是黄金和能量块的核心产区"  />
+<p class="caption">
+图2.21: 竞技场水晶是黄金和能量块的核心产区
+</p>
 </div>
-<div id="星满锻还是53满级" class="section level4 hasAnchor" number="2.2.15.3">
-<h4><span class="header-section-number">2.2.15.3</span> 4星满锻还是53满级<a href="成长日历.html#星满锻还是53满级" class="anchor-section" aria-label="Anchor link to header"></a></h4>
-<p>看看我这个号，如果卡邦不开启无尽资源模式，我目前没可能发展出5星主力了，只能考虑四星满锻。正常情况下玩到这里也是要权衡一下是发展4星满锻还是53满级当主力的。</p>
-<p>四星满锻战力比53满级高，而且机器人阶数高的时候能力的百分比一般也高，外加锻造给的167%的克制，而且觉醒容易，总的来说是优于53满级。53满级的好处是如果火种正好够的话（五个同样的T3C绝非易事），黄金要不了多少（89万的样子，而满锻一只四星需要几百万的黄金），其次五星当主力的话有领袖协同可以给四星用。</p>
+</div>
+<div id="四星满锻还是五三满级" class="section level4 hasAnchor" number="2.2.15.3">
+<h4><span class="header-section-number">2.2.15.3</span> 四星满锻还是五三满级<a href="成长日历.html#四星满锻还是五三满级" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>看看我这个号，如果卡邦不开启无尽资源模式，我目前没可能发展出5星主力了，只能考虑四星满锻。正常情况下玩到这里也是要权衡一下是发展四星满锻还是五三满级当主力的。</p>
+<p>四星满锻战力比五三满级高，而且机器人阶数高的时候能力的百分比一般也高，外加锻造给的167%的克制，而且觉醒容易，总的来说是优于五三满级。五三满级的好处是如果火种正好够的话（五个同样的T3C绝非易事），黄金要不了多少（89万的样子，而满锻一只四星需要几百万的黄金），其次五星当主力的话有领袖协同可以给四星用。</p>
+<table>
+<caption><span id="tab:unnamed-chunk-24">表2.1: </span>机器人升级升阶资源概算</caption>
+<thead>
+<tr class="header">
+<th align="right">星等</th>
+<th align="left">升至</th>
+<th align="right">累计黄金（万）</th>
+<th align="left">累计火种</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">2</td>
+<td align="left">3阶30</td>
+<td align="right">6.6</td>
+<td align="left">T1B:5 T1C:1</td>
+</tr>
+<tr class="even">
+<td align="right">3</td>
+<td align="left">4阶40</td>
+<td align="right">28.1</td>
+<td align="left">T2B:6 T1C:2 T2C:3 T1A:1</td>
+</tr>
+<tr class="odd">
+<td align="right">4</td>
+<td align="left">4阶40</td>
+<td align="right">62.7</td>
+<td align="left">T2B:4 T2C:12 T1A:5 T3B:3 T2A:1</td>
+</tr>
+<tr class="even">
+<td align="right">4</td>
+<td align="left">5阶50</td>
+<td align="right">114.1</td>
+<td align="left">T2B:4 T2C:12 T1A:5 T3B:6 T2A:3 T3C:1</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">3阶30</td>
+<td align="right">89.1</td>
+<td align="left">T3C:5 T2A:7 T4B:1</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">4阶40</td>
+<td align="right">177.1</td>
+<td align="left">T3C:9 T2A:7 T4B:3 T3A:1</td>
+</tr>
+<tr class="odd">
+<td align="right">5</td>
+<td align="left">5阶50</td>
+<td align="right">323.3</td>
+<td align="left">T3C:9 T2A:7 T4B:6 T3A:3 T4C:1</td>
+</tr>
+<tr class="even">
+<td align="right">5</td>
+<td align="left">6阶60</td>
+<td align="right">636.1</td>
+<td align="left">T3C:9 T2A:7 T4B:6 T3A:6 T4C:3 T5B:1</td>
+</tr>
+</tbody>
+</table>
 <p>以目前剩下的时间，如果卡邦不疯狂发放资源，只是发发能量块的话，我能把四星主力满锻一两只就不错了，所以我决定暂停其他四星的升级，资源都给三星和两星的锻造狗粮，能养饿鲨更好。至于五星3阶，目前唯一看得到希望的就是天火，因为有了四个科技T3C。</p>
-
 </div>
+<div id="打通领袖难度" class="section level4 hasAnchor" number="2.2.15.4">
+<h4><span class="header-section-number">2.2.15.4</span> 打通领袖难度<a href="成长日历.html#打通领袖难度" class="anchor-section" aria-label="Anchor link to header"></a></h4>
+<p>这两周的冷饭活动配的特殊任务是饿鲨主题的，也就是每关的关底都是饿鲨。我们都推测卡邦的程序员不会对游戏做什么改动（也许离职光了），但卡邦又“不负众望”地带来了新的bug：不同难度的地图里同一关的关底饿鲨居然不是同样类别的。另外也不知道为什么，又把队长难度每一步改回了2点体力。</p>
+<p>无论怎样，这样的特殊任务都很好打，我依然是一个四星战擎的盖世擎天柱队，不但轻松探索了指挥官，还打通了领袖的最简单线路。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-25"></span>
+<img src="02-juvenile_insertimage_12.png" alt="这会是未来让人怀念的画面"  />
+<p class="caption">
+图2.22: 这会是未来让人怀念的画面
+</p>
+</div>
+<p>而超能勇士活动送的野兽币也有很多，活动只过了一周，我已经攒出20000买了五星黄豹和猩猩队长。如果有时间和资源的话，突袭阵容可以往动物园转型。</p>
+<p>一次开了三个T3C全是战术，这下战威也具备五三的机会了。</p>
+<p>攒了一堆四星碎片，加上高水和精英日常欧气了两把，凑出了第四个五星（这之前还用10000超能勇士币买了五星黄豹）——热破！</p>
+</div>
+</div>
+<div id="久违了新盟战久违了迷雾" class="section level3 hasAnchor" number="2.2.16">
+<h3><span class="header-section-number">2.2.16</span> 久违了，新盟战，久违了，迷雾<a href="成长日历.html#久违了新盟战久违了迷雾" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>10月26日晚些的时候，有些玩家在战斗模式界面上看到了一个新的盟战入口图：</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-26"></span>
+<img src="02-juvenile_insertimage_14.png" alt="虚假黎明——这名字真令人唏嘘"  />
+<p class="caption">
+图2.23: 虚假黎明——这名字真令人唏嘘
+</p>
+</div>
+<p>可想而知，按原计划，10月27日是要推出这张让大家期待了三年半的新盟战地图的（“黑暗地平线”发布于2019年4月初），而在关服计划宣布后，玩家基本上对这个图能不能再出，是不抱希望的。卡邦在26到27日白天似乎一直在撤回这个入口，因为有些玩家看到新入口，有些看到的依然是旧的。等到27日晚间正式开盟战的时候，居然还发了一封邮件说明新地图，可是进去开盟战，并没有新图。</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-27"></span>
+<img src="02-juvenile_insertimage_15.png" alt="火种源之柱——120级难度的地图"  />
+<p class="caption">
+图2.24: 火种源之柱——120级难度的地图
+</p>
+</div>
+<p>我看应该是之前编译好的程序，看门大爷只记得改掉了发布的代码，不记得还有发邮件通知这回事。而跟这个<strong>虚假的</strong>盟战一同发布的，却是人间<strong>真实</strong>——大家期待了快一年的迷雾任务（上一次迷雾发布于2021年12月底）：</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-28"></span>
+<img src="02-juvenile_insertimage_16.png" alt="来抓猩猩啊！"  />
+<p class="caption">
+图2.25: 来抓猩猩啊！
+</p>
+</div>
+<p>进图看了一下，跟上一次一模一样的迷雾设计。这一年中入坑的玩家很多人还不知道什么是迷雾：这是一种全埋伏设计的方格地图，消耗大量的体力，奖励1~4阶的类别火种精华，对于老玩家来说，这里是T4C最大的产出。因为一年没有发布，所以很多玩家的五星角色升5阶与6阶非常困难。</p>
+<p>迷雾图随便往哪个方向跑都是随机遇敌，敌人中会有小Boss型的，战力高一些，奖励也高一些，跑一次下来6个类别的精华都会得到一些，而小Boss和最终Boss的掉落更多，也就决定了这一期迷雾哪个类别的产量会相对高一些（我记得第一张迷雾就是严重倾向于爆破系）。</p>
+<p>但是有玩家也会发现乱跑的话迷雾的图始终不会100%探索，总是99%的样子。如果你真的有强迫症的话，要按照左边跑五次，右边跑五次的方式，就可以全探索了</p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-29"></span>
+<img src="02-juvenile_insertimage_17.png" alt="左边6次，右边6次，就能100%探索" width="50%" />
+<p class="caption">
+图2.26: 左边6次，右边6次，就能100%探索
+</p>
+</div>
+<p>一般迷雾任务是持续一周，而卡邦也许是看到了玩家的抱怨，既然欠了这么久，不如这一次就把迷雾任务——持续78天，直到关服！</p>
+
 </div>
 </div>
 </div>
