--- a/protoform_book/技术资料.html
+++ b/protoform_book/技术资料.html
@@ -215,8 +215,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="2.2.15.1" data-path="成长日历.html"><a href="成长日历.html#还会有克劳莉娅吗"><i class="fa fa-check"></i><b>2.2.15.1</b> 还会有克劳莉娅吗</a></li>
 <li class="chapter" data-level="2.2.15.2" data-path="成长日历.html"><a href="成长日历.html#能量块大放送"><i class="fa fa-check"></i><b>2.2.15.2</b> 能量块大放送</a></li>
-<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#星满锻还是53满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 4星满锻还是53满级</a></li>
+<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#四星满锻还是五三满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 四星满锻还是五三满级</a></li>
+<li class="chapter" data-level="2.2.15.4" data-path="成长日历.html"><a href="成长日历.html#打通领袖难度"><i class="fa fa-check"></i><b>2.2.15.4</b> 打通领袖难度</a></li>
 </ul></li>
+<li class="chapter" data-level="2.2.16" data-path="成长日历.html"><a href="成长日历.html#久违了新盟战久违了迷雾"><i class="fa fa-check"></i><b>2.2.16</b> 久违了，新盟战，久违了，迷雾</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -283,13 +285,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>25级解锁塞伯坦传奇</li>
 </ul></li>
 </ul>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-22"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-30"></span>
 <img src="11-techspecs_insertimage_1.png" alt="20级之前只能上三个人"  />
 <p class="caption">
 图3.1: 20级之前只能上三个人
 </p>
 </div>
-<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-23"></span>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-31"></span>
 <img src="11-techspecs_insertimage_2.png" alt="20级解锁队长难度"  />
 <p class="caption">
 图3.2: 20级解锁队长难度
@@ -353,7 +355,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="事件目标" class="section level3 hasAnchor" number="3.2.1">
 <h3><span class="header-section-number">3.2.1</span> 事件目标<a href="技术资料.html#事件目标" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-24">表3.1: </span>事件目标表（2022）</caption>
+<caption><span id="tab:unnamed-chunk-32">表3.1: </span>事件目标表（2022）</caption>
 <colgroup>
 <col width="5%" />
 <col width="47%" />
@@ -661,7 +663,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="同盟任务盟战" class="section level3 hasAnchor" number="3.4.1">
 <h3><span class="header-section-number">3.4.1</span> 同盟任务（盟战）<a href="技术资料.html#同盟任务盟战" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <table>
-<caption><span id="tab:unnamed-chunk-25">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-33">表3.2: </span>盟战里程碑奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="15%" />
 <col width="84%" />
@@ -788,7 +790,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-26">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
+<caption><span id="tab:unnamed-chunk-34">表3.3: </span>盟战排名奖励（黑暗地平线/灭火）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -857,7 +859,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="使用类别机器人" class="section level5 hasAnchor" number="3.4.2.1.1">
 <h5><span class="header-section-number">3.4.2.1.1</span> 使用类别机器人<a href="技术资料.html#使用类别机器人" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-27">表3.4: </span>分数获取表（使用某类别机器人）</caption>
+<caption><span id="tab:unnamed-chunk-35">表3.4: </span>分数获取表（使用某类别机器人）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -932,7 +934,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-28">表3.5: </span>里程碑奖励表（使用某类别机器人）</caption>
+<caption><span id="tab:unnamed-chunk-36">表3.5: </span>里程碑奖励表（使用某类别机器人）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -966,7 +968,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="不受限制" class="section level5 hasAnchor" number="3.4.2.1.2">
 <h5><span class="header-section-number">3.4.2.1.2</span> 不受限制<a href="技术资料.html#不受限制" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-29">表3.6: </span>分数获取表（不受限制）</caption>
+<caption><span id="tab:unnamed-chunk-37">表3.6: </span>分数获取表（不受限制）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1041,7 +1043,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-30">表3.7: </span>里程碑奖励表（不受限制）</caption>
+<caption><span id="tab:unnamed-chunk-38">表3.7: </span>里程碑奖励表（不受限制）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1079,7 +1081,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="先遣队任务成功" class="section level5 hasAnchor" number="3.4.2.2.1">
 <h5><span class="header-section-number">3.4.2.2.1</span> 先遣队任务成功<a href="技术资料.html#先遣队任务成功" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-31">表3.8: </span>分数获取表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-39">表3.8: </span>分数获取表（先遣队任务成功）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1106,7 +1108,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-32">表3.9: </span>里程碑奖励表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-40">表3.9: </span>里程碑奖励表（先遣队任务成功）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1149,7 +1151,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-33">表3.10: </span>排名奖励表（先遣队任务成功）</caption>
+<caption><span id="tab:unnamed-chunk-41">表3.10: </span>排名奖励表（先遣队任务成功）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1203,7 +1205,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="任务完成3日" class="section level5 hasAnchor" number="3.4.2.2.2">
 <h5><span class="header-section-number">3.4.2.2.2</span> 任务完成（3日）<a href="技术资料.html#任务完成3日" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-34">表3.11: </span>分数获取表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-42">表3.11: </span>分数获取表（任务完成（3日））</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1298,7 +1300,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-35">表3.12: </span>里程碑奖励表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-43">表3.12: </span>里程碑奖励表（任务完成（3日））</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1341,7 +1343,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-36">表3.13: </span>排名奖励表（任务完成（3日））</caption>
+<caption><span id="tab:unnamed-chunk-44">表3.13: </span>排名奖励表（任务完成（3日））</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1395,7 +1397,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="机器人升级与升阶" class="section level5 hasAnchor" number="3.4.2.2.3">
 <h5><span class="header-section-number">3.4.2.2.3</span> 机器人升级与升阶<a href="技术资料.html#机器人升级与升阶" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-37">表3.14: </span>分数获取表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-45">表3.14: </span>分数获取表（机器人升级与升阶）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1446,7 +1448,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-38">表3.15: </span>里程碑奖励表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-46">表3.15: </span>里程碑奖励表（机器人升级与升阶）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1501,7 +1503,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-39">表3.16: </span>排名奖励表（机器人升级与升阶）</caption>
+<caption><span id="tab:unnamed-chunk-47">表3.16: </span>排名奖励表（机器人升级与升阶）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1555,7 +1557,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="道具使用" class="section level5 hasAnchor" number="3.4.2.2.4">
 <h5><span class="header-section-number">3.4.2.2.4</span> 道具使用<a href="技术资料.html#道具使用" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-40">表3.17: </span>分数获取表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-48">表3.17: </span>分数获取表（道具使用）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1610,7 +1612,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-41">表3.18: </span>里程碑奖励表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-49">表3.18: </span>里程碑奖励表（道具使用）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1653,7 +1655,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-42">表3.19: </span>排名奖励表（道具使用）</caption>
+<caption><span id="tab:unnamed-chunk-50">表3.19: </span>排名奖励表（道具使用）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1707,7 +1709,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="竞技场战斗" class="section level5 hasAnchor" number="3.4.2.2.5">
 <h5><span class="header-section-number">3.4.2.2.5</span> 竞技场战斗<a href="技术资料.html#竞技场战斗" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-43">表3.20: </span>分数获取表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-51">表3.20: </span>分数获取表（竞技场战斗）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1738,7 +1740,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-44">表3.21: </span>里程碑奖励表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-52">表3.21: </span>里程碑奖励表（竞技场战斗）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1793,7 +1795,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-45">表3.22: </span>排名奖励表（竞技场战斗）</caption>
+<caption><span id="tab:unnamed-chunk-53">表3.22: </span>排名奖励表（竞技场战斗）</caption>
 <colgroup>
 <col width="6%" />
 <col width="93%" />
@@ -1851,7 +1853,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="特殊任务完成" class="section level5 hasAnchor" number="3.4.2.3.1">
 <h5><span class="header-section-number">3.4.2.3.1</span> 特殊任务完成<a href="技术资料.html#特殊任务完成" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-46">表3.23: </span>分数获取表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-54">表3.23: </span>分数获取表（特殊任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -1878,7 +1880,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-47">表3.24: </span>里程碑奖励表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-55">表3.24: </span>里程碑奖励表（特殊任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -1925,7 +1927,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-48">表3.25: </span>排名奖励表（特殊任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-56">表3.25: </span>排名奖励表（特殊任务完成）</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -1979,7 +1981,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="机器人战斗1" class="section level5 hasAnchor" number="3.4.2.3.2">
 <h5><span class="header-section-number">3.4.2.3.2</span> 机器人战斗（1）<a href="技术资料.html#机器人战斗1" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-49">表3.26: </span>分数获取表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-57">表3.26: </span>分数获取表（机器人战斗（1））</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -2050,7 +2052,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-50">表3.27: </span>里程碑奖励表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-58">表3.27: </span>里程碑奖励表（机器人战斗（1））</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -2101,7 +2103,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-51">表3.28: </span>排名奖励表（机器人战斗（1））</caption>
+<caption><span id="tab:unnamed-chunk-59">表3.28: </span>排名奖励表（机器人战斗（1））</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -2155,7 +2157,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="突袭升华战" class="section level5 hasAnchor" number="3.4.2.3.3">
 <h5><span class="header-section-number">3.4.2.3.3</span> 突袭升华战<a href="技术资料.html#突袭升华战" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-52">表3.29: </span>分数获取表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-60">表3.29: </span>分数获取表（突袭升华战）</caption>
 <thead>
 <tr class="header">
 <th align="left">得分点</th>
@@ -2210,7 +2212,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-53">表3.30: </span>里程碑奖励表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-61">表3.30: </span>里程碑奖励表（突袭升华战）</caption>
 <thead>
 <tr class="header">
 <th align="right">里程碑分数</th>
@@ -2257,7 +2259,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-54">表3.31: </span>排名奖励表（突袭升华战）</caption>
+<caption><span id="tab:unnamed-chunk-62">表3.31: </span>排名奖励表（突袭升华战）</caption>
 <colgroup>
 <col width="9%" />
 <col width="90%" />
@@ -2315,7 +2317,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="任意任务完成" class="section level5 hasAnchor" number="3.4.2.3.5">
 <h5><span class="header-section-number">3.4.2.3.5</span> 任意任务完成<a href="技术资料.html#任意任务完成" class="anchor-section" aria-label="Anchor link to header"></a></h5>
 <table>
-<caption><span id="tab:unnamed-chunk-55">表3.32: </span>分数获取表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-63">表3.32: </span>分数获取表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
@@ -2325,7 +2327,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-56">表3.33: </span>里程碑奖励表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-64">表3.33: </span>里程碑奖励表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
@@ -2335,7 +2337,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </tbody>
 </table>
 <table>
-<caption><span id="tab:unnamed-chunk-57">表3.34: </span>排名奖励表（任意任务完成）</caption>
+<caption><span id="tab:unnamed-chunk-65">表3.34: </span>排名奖励表（任意任务完成）</caption>
 <thead>
 <tr class="header">
 <th align="left">X…</th>
