--- a/chars_book/侦查系.html
+++ b/chars_book/侦查系.html
@@ -72,7 +72,8 @@
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告</a></li>
-<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言</a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#全人物表"><i class="fa fa-check"></i><b>1.3</b> 全人物表</a></li>
+<li class="chapter" data-level="1.4" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.4</b> 前言</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法</a>
 <ul>
@@ -90,8 +91,8 @@
 <li class="chapter" data-level="3.2" data-path="战术系.html"><a href="战术系.html#大黄蜂"><i class="fa fa-check"></i><b>3.2</b> 大黄蜂</a></li>
 <li class="chapter" data-level="3.3" data-path="战术系.html"><a href="战术系.html#通天晓"><i class="fa fa-check"></i><b>3.3</b> 通天晓</a></li>
 <li class="chapter" data-level="3.4" data-path="战术系.html"><a href="战术系.html#红蜘蛛"><i class="fa fa-check"></i><b>3.4</b> 红蜘蛛</a></li>
-<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.5</b> 战威</a></li>
-<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.6</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.5</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.6</b> 战威</a></li>
 <li class="chapter" data-level="3.7" data-path="战术系.html"><a href="战术系.html#狂飙"><i class="fa fa-check"></i><b>3.7</b> 狂飙</a></li>
 <li class="chapter" data-level="3.8" data-path="战术系.html"><a href="战术系.html#暗黑擎天柱"><i class="fa fa-check"></i><b>3.8</b> 暗黑擎天柱</a></li>
 <li class="chapter" data-level="3.9" data-path="战术系.html"><a href="战术系.html#补天士"><i class="fa fa-check"></i><b>3.9</b> 补天士</a></li>
@@ -148,8 +149,8 @@
 <li class="chapter" data-level="8" data-path="爆破系.html"><a href="爆破系.html"><i class="fa fa-check"></i><b>8</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系</a>
 <ul>
 <li class="chapter" data-level="8.1" data-path="爆破系.html"><a href="爆破系.html#电影铁皮"><i class="fa fa-check"></i><b>8.1</b> 电影铁皮</a></li>
-<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.2</b> 黄蜂勇士</a></li>
-<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.3</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.2</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.3</b> 黄蜂勇士</a></li>
 <li class="chapter" data-level="8.4" data-path="爆破系.html"><a href="爆破系.html#爆威"><i class="fa fa-check"></i><b>8.4</b> 爆威</a></li>
 <li class="chapter" data-level="8.5" data-path="爆破系.html"><a href="爆破系.html#喷气机"><i class="fa fa-check"></i><b>8.5</b> 喷气机</a></li>
 <li class="chapter" data-level="8.6" data-path="爆破系.html"><a href="爆破系.html#惊破天"><i class="fa fa-check"></i><b>8.6</b> 惊破天</a></li>
@@ -200,7 +201,7 @@
 <div id="风刃" class="section level2 hasAnchor" number="6.1">
 <h2><span class="header-section-number">6.1</span> 风刃<a href="侦查系.html#风刃" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/3%20-%20Windblade_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-30-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-32-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-28" class="section level3 hasAnchor" number="6.1.1">
 <h3><span class="header-section-number">6.1.1</span> 特点分析<a href="侦查系.html#特点分析-28" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -255,7 +256,7 @@
 <div id="路障" class="section level2 hasAnchor" number="6.2">
 <h2><span class="header-section-number">6.2</span> 路障<a href="侦查系.html#路障" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/1%20-%20Barricade_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-31-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-33-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-29" class="section level3 hasAnchor" number="6.2.1">
 <h3><span class="header-section-number">6.2.1</span> 特点分析<a href="侦查系.html#特点分析-29" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -314,7 +315,7 @@
 <div id="横炮" class="section level2 hasAnchor" number="6.3">
 <h2><span class="header-section-number">6.3</span> 横炮<a href="侦查系.html#横炮" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/2%20-%20Sideswipe_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-32-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-34-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-30" class="section level3 hasAnchor" number="6.3.1">
 <h3><span class="header-section-number">6.3.1</span> 特点分析<a href="侦查系.html#特点分析-30" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -391,7 +392,7 @@
 <div id="警车" class="section level2 hasAnchor" number="6.4">
 <h2><span class="header-section-number">6.4</span> 警车<a href="侦查系.html#警车" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/4%20-%20Prowl_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-33-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-35-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-31" class="section level3 hasAnchor" number="6.4.1">
 <h3><span class="header-section-number">6.4.1</span> 特点分析<a href="侦查系.html#特点分析-31" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -448,7 +449,7 @@
 <div id="小黄蜂" class="section level2 hasAnchor" number="6.5">
 <h2><span class="header-section-number">6.5</span> 小黄蜂<a href="侦查系.html#小黄蜂" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/5%20-%20Bumblebee_G1_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-34-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-36-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-32" class="section level3 hasAnchor" number="6.5.1">
 <h3><span class="header-section-number">6.5.1</span> 特点分析<a href="侦查系.html#特点分析-32" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -503,7 +504,7 @@
 <div id="反冲" class="section level2 hasAnchor" number="6.6">
 <h2><span class="header-section-number">6.6</span> 反冲<a href="侦查系.html#反冲" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/6%20-%20Kickback_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-35-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-37-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-33" class="section level3 hasAnchor" number="6.6.1">
 <h3><span class="header-section-number">6.6.1</span> 特点分析<a href="侦查系.html#特点分析-33" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -575,7 +576,7 @@
 <div id="黄豹" class="section level2 hasAnchor" number="6.7">
 <h2><span class="header-section-number">6.7</span> 黄豹<a href="侦查系.html#黄豹" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/7%20-%20Cheetor_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-36-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-38-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-34" class="section level3 hasAnchor" number="6.7.1">
 <h3><span class="header-section-number">6.7.1</span> 特点分析<a href="侦查系.html#特点分析-34" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -645,7 +646,7 @@
 <div id="爵士" class="section level2 hasAnchor" number="6.8">
 <h2><span class="header-section-number">6.8</span> 爵士<a href="侦查系.html#爵士" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/8%20-%20Jazz_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-37-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-39-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-35" class="section level3 hasAnchor" number="6.8.1">
 <h3><span class="header-section-number">6.8.1</span> 特点分析<a href="侦查系.html#特点分析-35" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -706,7 +707,7 @@
 <div id="滑流" class="section level2 hasAnchor" number="6.9">
 <h2><span class="header-section-number">6.9</span> 滑流<a href="侦查系.html#滑流" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/51%20-%20Slipstream_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-38-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-40-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-36" class="section level3 hasAnchor" number="6.9.1">
 <h3><span class="header-section-number">6.9.1</span> 特点分析<a href="侦查系.html#特点分析-36" class="anchor-section" aria-label="Anchor link to header"></a></h3>
