--- a/chars_book/斗士系.html
+++ b/chars_book/斗士系.html
@@ -72,7 +72,8 @@
 <ul>
 <li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#更新日志"><i class="fa fa-check"></i><b>1.1</b> 更新日志</a></li>
 <li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#更新预告"><i class="fa fa-check"></i><b>1.2</b> 更新预告</a></li>
-<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.3</b> 前言</a></li>
+<li class="chapter" data-level="1.3" data-path="index.html"><a href="index.html#全人物表"><i class="fa fa-check"></i><b>1.3</b> 全人物表</a></li>
+<li class="chapter" data-level="1.4" data-path="index.html"><a href="index.html#前言"><i class="fa fa-check"></i><b>1.4</b> 前言</a></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="术语与打法.html"><a href="术语与打法.html"><i class="fa fa-check"></i><b>2</b> 术语与打法</a>
 <ul>
@@ -90,8 +91,8 @@
 <li class="chapter" data-level="3.2" data-path="战术系.html"><a href="战术系.html#大黄蜂"><i class="fa fa-check"></i><b>3.2</b> 大黄蜂</a></li>
 <li class="chapter" data-level="3.3" data-path="战术系.html"><a href="战术系.html#通天晓"><i class="fa fa-check"></i><b>3.3</b> 通天晓</a></li>
 <li class="chapter" data-level="3.4" data-path="战术系.html"><a href="战术系.html#红蜘蛛"><i class="fa fa-check"></i><b>3.4</b> 红蜘蛛</a></li>
-<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.5</b> 战威</a></li>
-<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.6</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.5" data-path="战术系.html"><a href="战术系.html#恐龙勇士"><i class="fa fa-check"></i><b>3.5</b> 恐龙勇士</a></li>
+<li class="chapter" data-level="3.6" data-path="战术系.html"><a href="战术系.html#战威"><i class="fa fa-check"></i><b>3.6</b> 战威</a></li>
 <li class="chapter" data-level="3.7" data-path="战术系.html"><a href="战术系.html#狂飙"><i class="fa fa-check"></i><b>3.7</b> 狂飙</a></li>
 <li class="chapter" data-level="3.8" data-path="战术系.html"><a href="战术系.html#暗黑擎天柱"><i class="fa fa-check"></i><b>3.8</b> 暗黑擎天柱</a></li>
 <li class="chapter" data-level="3.9" data-path="战术系.html"><a href="战术系.html#补天士"><i class="fa fa-check"></i><b>3.9</b> 补天士</a></li>
@@ -148,8 +149,8 @@
 <li class="chapter" data-level="8" data-path="爆破系.html"><a href="爆破系.html"><i class="fa fa-check"></i><b>8</b> <img src="images/Demolitions-small.png" style="height:0.6cm" />爆破系</a>
 <ul>
 <li class="chapter" data-level="8.1" data-path="爆破系.html"><a href="爆破系.html#电影铁皮"><i class="fa fa-check"></i><b>8.1</b> 电影铁皮</a></li>
-<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.2</b> 黄蜂勇士</a></li>
-<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.3</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.2" data-path="爆破系.html"><a href="爆破系.html#搅拌者"><i class="fa fa-check"></i><b>8.2</b> 搅拌者</a></li>
+<li class="chapter" data-level="8.3" data-path="爆破系.html"><a href="爆破系.html#黄蜂勇士"><i class="fa fa-check"></i><b>8.3</b> 黄蜂勇士</a></li>
 <li class="chapter" data-level="8.4" data-path="爆破系.html"><a href="爆破系.html#爆威"><i class="fa fa-check"></i><b>8.4</b> 爆威</a></li>
 <li class="chapter" data-level="8.5" data-path="爆破系.html"><a href="爆破系.html#喷气机"><i class="fa fa-check"></i><b>8.5</b> 喷气机</a></li>
 <li class="chapter" data-level="8.6" data-path="爆破系.html"><a href="爆破系.html#惊破天"><i class="fa fa-check"></i><b>8.6</b> 惊破天</a></li>
@@ -200,7 +201,7 @@
 <div id="斗擎" class="section level2 hasAnchor" number="4.1">
 <h2><span class="header-section-number">4.1</span> 斗擎<a href="斗士系.html#斗擎" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/35%20-%20Optimus_Prime_MV1_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-12-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-14-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-10" class="section level3 hasAnchor" number="4.1.1">
 <h3><span class="header-section-number">4.1.1</span> 特点分析<a href="斗士系.html#特点分析-10" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -258,7 +259,7 @@
 <div id="碾碎器" class="section level2 hasAnchor" number="4.2">
 <h2><span class="header-section-number">4.2</span> 碾碎器<a href="斗士系.html#碾碎器" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/33%20-%20Grindor_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-13-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-15-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-11" class="section level3 hasAnchor" number="4.2.1">
 <h3><span class="header-section-number">4.2.1</span> 特点分析<a href="斗士系.html#特点分析-11" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -322,7 +323,7 @@
 <div id="汽车大师" class="section level2 hasAnchor" number="4.3">
 <h2><span class="header-section-number">4.3</span> 汽车大师<a href="斗士系.html#汽车大师" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/34%20-%20Motormaster_Icon_v2.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-14-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-16-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-12" class="section level3 hasAnchor" number="4.3.1">
 <h3><span class="header-section-number">4.3.1</span> 特点分析<a href="斗士系.html#特点分析-12" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -381,7 +382,7 @@
 <div id="钢锁" class="section level2 hasAnchor" number="4.4">
 <h2><span class="header-section-number">4.4</span> 钢锁<a href="斗士系.html#钢锁" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/32%20-%20Grimlock_Icon_v3.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-15-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-17-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-13" class="section level3 hasAnchor" number="4.4.1">
 <h3><span class="header-section-number">4.4.1</span> 特点分析<a href="斗士系.html#特点分析-13" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -456,7 +457,7 @@
 <div id="猩猩队长" class="section level2 hasAnchor" number="4.5">
 <h2><span class="header-section-number">4.5</span> 猩猩队长<a href="斗士系.html#猩猩队长" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/36%20-%20Optimus_Primal_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-16-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-18-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-14" class="section level3 hasAnchor" number="4.5.1">
 <h3><span class="header-section-number">4.5.1</span> 特点分析<a href="斗士系.html#特点分析-14" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -511,7 +512,7 @@
 <div id="野牛" class="section level2 hasAnchor" number="4.6">
 <h2><span class="header-section-number">4.6</span> 野牛<a href="斗士系.html#野牛" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/37%20-%20Tantrum_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-17-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-19-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-15" class="section level3 hasAnchor" number="4.6.1">
 <h3><span class="header-section-number">4.6.1</span> 特点分析<a href="斗士系.html#特点分析-15" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -573,7 +574,7 @@
 <div id="惊天雷" class="section level2 hasAnchor" number="4.7">
 <h2><span class="header-section-number">4.7</span> 惊天雷<a href="斗士系.html#惊天雷" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/38%20-%20Thundercracker_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-18-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-20-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-16" class="section level3 hasAnchor" number="4.7.1">
 <h3><span class="header-section-number">4.7.1</span> 特点分析<a href="斗士系.html#特点分析-16" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -645,7 +646,7 @@
 <div id="g1铁皮" class="section level2 hasAnchor" number="4.8">
 <h2><span class="header-section-number">4.8</span> G1铁皮<a href="斗士系.html#g1铁皮" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/50%20-%20Ironhide_G1_Icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-19-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-21-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-17" class="section level3 hasAnchor" number="4.8.1">
 <h3><span class="header-section-number">4.8.1</span> 特点分析<a href="斗士系.html#特点分析-17" class="anchor-section" aria-label="Anchor link to header"></a></h3>
@@ -715,7 +716,7 @@
 <div id="飞毛腿" class="section level2 hasAnchor" number="4.9">
 <h2><span class="header-section-number">4.9</span> 飞毛腿<a href="斗士系.html#飞毛腿" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="img/53%20-%20Sunstreaker_icon.jpg" /></p>
-<p><img src="tftf_files/figure-html/unnamed-chunk-20-1.png" width="480" /></p>
+<p><img src="tftf_files/figure-html/unnamed-chunk-22-1.png" width="480" /></p>
 <!--Note-->
 <div id="特点分析-18" class="section level3 hasAnchor" number="4.9.1">
 <h3><span class="header-section-number">4.9.1</span> 特点分析<a href="斗士系.html#特点分析-18" class="anchor-section" aria-label="Anchor link to header"></a></h3>
