--- a/protoform_book/index.html
+++ b/protoform_book/index.html
@@ -215,8 +215,10 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="2.2.15.1" data-path="成长日历.html"><a href="成长日历.html#还会有克劳莉娅吗"><i class="fa fa-check"></i><b>2.2.15.1</b> 还会有克劳莉娅吗</a></li>
 <li class="chapter" data-level="2.2.15.2" data-path="成长日历.html"><a href="成长日历.html#能量块大放送"><i class="fa fa-check"></i><b>2.2.15.2</b> 能量块大放送</a></li>
-<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#星满锻还是53满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 4星满锻还是53满级</a></li>
+<li class="chapter" data-level="2.2.15.3" data-path="成长日历.html"><a href="成长日历.html#四星满锻还是五三满级"><i class="fa fa-check"></i><b>2.2.15.3</b> 四星满锻还是五三满级</a></li>
+<li class="chapter" data-level="2.2.15.4" data-path="成长日历.html"><a href="成长日历.html#打通领袖难度"><i class="fa fa-check"></i><b>2.2.15.4</b> 打通领袖难度</a></li>
 </ul></li>
+<li class="chapter" data-level="2.2.16" data-path="成长日历.html"><a href="成长日历.html#久违了新盟战久违了迷雾"><i class="fa fa-check"></i><b>2.2.16</b> 久违了，新盟战，久违了，迷雾</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="技术资料.html"><a href="技术资料.html"><i class="fa fa-check"></i><b>3</b> 技术资料</a>
@@ -263,7 +265,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">百炼为战：原生体成长记</h1>
 <p class="author"><em>公理天城翻译官</em></p>
-<p class="date"><em>更新时间：2022-10-23</em></p>
+<p class="date"><em>更新时间：2022-10-28</em></p>
 </div>
 <div id="更新与简介" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> 更新与简介<a href="index.html#更新与简介" class="anchor-section" aria-label="Anchor link to header"></a></h1>
